Made react a peer dependency.

--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "main": "./dist/bundle.js",
   "scripts": {
     "start": "webpack --watch --config webpack.config.js",
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js --mode production"
   },
   "dependencies": {
-    "generic-data-chamber": "^6.0.0",
+    "generic-data-chamber": "^6.0.2"
+  },
+  "peerDependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
@@ -37,6 +39,8 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^4.0.0",
     "css-loader": "^3.0.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5"
