--- a/.babelrc
+++ b/.babelrc
@@ -13,8 +13,15 @@
     [
       "module-resolver",
       {
-        "root": ["./src"],
-        "alias": {}
+        "root": ["./src/"],
+        "alias": {
+          "@components": "./src/components",
+          "@factories": "./src/factories",
+          "@library": "./src/library",
+          "@procedures": "./src/procedures",
+          "@store": "./src/store",
+          "@tools": "./src/tools"
+        }
       }
     ]
   ]
