--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-dev-os",
   "author": "Scotty Rogers",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "An interactive development environment for react apps.",
   "license": "ISC",
   "repository": {
@@ -19,7 +19,7 @@
   ],
   "main": "./dist/bundle.js",
   "scripts": {
-    "start": "webpack --watch --config webpack.config.js",
+    "start": "webpack --watch --config webpack.config.js --mode development",
     "build": "webpack --config webpack.config.js --mode production"
   },
   "dependencies": {
@@ -39,8 +39,6 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^4.0.0",
     "css-loader": "^3.0.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5"
