--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-dev-os",
   "author": "Scotty Rogers",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "An interactive development environment for react apps.",
   "license": "ISC",
   "repository": {
@@ -23,7 +23,8 @@
     "build": "webpack --config webpack.config.js --mode production"
   },
   "dependencies": {
-    "generic-data-chamber": "^6.0.2"
+    "generic-data-chamber": "^6.0.2",
+    "scr-pipe": "^1.0.4"
   },
   "peerDependencies": {
     "react": "^16.13.1",
