--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-plugin-module-resolver": "^4.0.0",
     "css-loader": "^3.0.0",
     "style-loader": "^0.23.1",
+    "url-loader": "^4.1.0",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5"
   }
