--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-dev-os",
   "author": "Scotty Rogers",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "An interactive development environment for react apps.",
   "license": "ISC",
   "repository": {
@@ -20,7 +20,8 @@
   "main": "./dist/bundle.js",
   "scripts": {
     "start": "webpack --watch --config webpack.config.js --mode development",
-    "build": "webpack --config webpack.config.js --mode production"
+    "build": "webpack --config webpack.config.js --mode production",
+    "prepublishOnly": "webpack --config webpack.config.js --mode production"
   },
   "dependencies": {
     "generic-data-chamber": "^6.0.2",
