--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-dev-os",
   "author": "Scotty Rogers",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "An interactive development environment for react apps.",
   "license": "ISC",
   "repository": {
@@ -18,6 +18,9 @@
     "live"
   ],
   "main": "./dist/bundle.js",
+  "files": [
+    "./dist/bundle.js"
+  ],
   "scripts": {
     "start": "webpack --watch --config webpack.config.js --mode development",
     "build": "webpack --config webpack.config.js --mode production",
