--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-dev-os",
   "author": "Scotty Rogers",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "An interactive development environment for react apps.",
   "license": "ISC",
   "repository": {
@@ -17,9 +17,9 @@
     "hot",
     "live"
   ],
-  "main": "./dist/bundle.js",
+  "main": "dist/bundle.js",
   "files": [
-    "./dist/bundle.js"
+    "dist"
   ],
   "scripts": {
     "start": "webpack --watch --config webpack.config.js --mode development",
