Added default hot keys to devOS.
Need to create a tool that creates a single keyup and keydown listener on devOS.

--- a/.babelrc
+++ b/.babelrc
@@ -16,6 +16,7 @@
         "root": ["./src/"],
         "alias": {
           "@components": "./src/components",
+					"@configs": "./src/configs",
           "@factories": "./src/factories",
           "@library": "./src/library",
           "@procedures": "./src/procedures",
